--- a/src/main/resources/map.cfg
+++ b/src/main/resources/map.cfg
@@ -222,10 +222,12 @@ climber{
        	nominal_out_voltage: 0.0
        	peak_out_voltage: 12.0
        	profile: 0
-       	kP: 0.5
-       	kI: 0.0
-       	kD: 0.0
-       	kF: 1
+		kP0: 0.5
+		kI0: 0.0
+		kD0: 0.0
+		kP1: 0.0
+		kI1: 0.0
+		kD1: 0.0
        	fwd_lim_norm_open: true
        	rev_lim_norm_open: true
        	fwd_lim_enabled: true
@@ -235,6 +237,8 @@ climber{
        	rev_soft_lim_enabled: false
        	rev_soft_lim_val: -0.1
        	brake_mode: true
+       	max_speed: 1
+       	encoder_CPR: 1024
     }
     max_current: 12.0
 }
