Fix path assignment for linux.

--- a/build.gradle
+++ b/build.gradle
@@ -153,5 +153,5 @@ artifacts {
 test {
 	String nf = new File('./src/test/resources/fake').getCanonicalPath()
 	String p = System.getProperty('java.library.path')
-	systemProperty 'java.library.path', p.substring(0, p.length() - 1) + nf
+	systemProperty 'java.library.path', p+":"+nf
 }
