--- a/src/main/resources/map.cfg
+++ b/src/main/resources/map.cfg
@@ -39,11 +39,11 @@ drive {
 		deadband_enabled: false
 	}
 	right_master {
-		port: 5
+		port: 2
 		feedback_device: QuadEncoder
 		reverse_sensor: false
 		reverse_output: false
-		is_inverted: false
+		is_inverted: true
 		nominal_out_voltage: 0.0
 		peak_out_voltage: 12.0
 		profile: 0
@@ -62,15 +62,15 @@ drive {
 		fwd_soft_lim_val: 0.1
 		rev_soft_lim_enabled: false
 		rev_soft_lim_val: -0.1
-		brake_mode: true
+		brake_mode: false
 		encoder_CPR: 512
 	}
 	left_master{
-        port: 6
+        port: 7
         feedback_device: QuadEncoder
         reverse_sensor: false
-        reverse_output: false
-        is_inverted: true
+        reverse_output: true
+        is_inverted: false
         nominal_out_voltage: 0.0
         peak_out_voltage: 12.0
         profile: 0
@@ -89,7 +89,7 @@ drive {
         fwd_soft_lim_val: 0.1
         rev_soft_lim_enabled: false
         rev_soft_lim_val: -0.1
-        brake_mode: true
+        brake_mode: false
         encoder_CPR: 512
     }
 	right_slave {
@@ -97,7 +97,7 @@ drive {
 		feedback_device: QuadEncoder
 		reverse_sensor: false
 		reverse_output: false
-		is_inverted: false
+		is_inverted: true
 		nominal_out_voltage: 0.0
 		peak_out_voltage: 12.0
 		profile: 0
@@ -116,68 +116,41 @@ drive {
 		fwd_soft_lim_val: 0.1
 		rev_soft_lim_enabled: false
 		rev_soft_lim_val: -0.1
-		brake_mode: true
+		brake_mode: false
 		encoder_CPR: 512
 	}
 	right_slave{
-		port: 4
-		feedback_device: QuadEncoder
-		reverse_sensor: false
-		reverse_output: false
-		is_inverted: false
-		nominal_out_voltage: 0.0
-		peak_out_voltage: 12.0
-		profile: 0
-		kP0: 0.3
-		kI0: 0.00
-		kD0: 3.0
-		kP1: 0.3
-		kI1: 0.00
-		kD1: 3.0
-		max_speed: 13.5
-		fwd_lim_norm_open: true
-		rev_lim_norm_open: true
-		fwd_lim_enabled: true
-		rev_lim_enabled: true
-		fwd_soft_lim_enabled: false
-		fwd_soft_lim_val: 0.1
-		rev_soft_lim_enabled: false
-		rev_soft_lim_val: -0.1
-		brake_mode: true
-		encoder_CPR: 512
-	}
-	left_slave{
-		port: 2
-		feedback_device: QuadEncoder
-		reverse_sensor: false
-		reverse_output: false
-		is_inverted: false
-		nominal_out_voltage: 0.0
-		peak_out_voltage: 12.0
-		profile: 0
-		kP0: 0.3
-		kI0: 0.00
-		kD0: 3.0
-		kP1: 0.3
-		kI1: 0.00
-		kD1: 3.0
-		max_speed: 13.5
-		fwd_lim_norm_open: true
-		rev_lim_norm_open: true
-		fwd_lim_enabled: true
-		rev_lim_enabled: true
-		fwd_soft_lim_enabled: false
-		fwd_soft_lim_val: 0.1
-		rev_soft_lim_enabled: false
-		rev_soft_lim_val: -0.1
-		brake_mode: true
-		encoder_CPR: 512
-	}
-	left_slave{
 		port: 3
 		feedback_device: QuadEncoder
 		reverse_sensor: false
 		reverse_output: false
+		is_inverted: true
+		nominal_out_voltage: 0.0
+		peak_out_voltage: 12.0
+		profile: 0
+		kP0: 0.3
+		kI0: 0.00
+		kD0: 3.0
+		kP1: 0.3
+		kI1: 0.00
+		kD1: 3.0
+		max_speed: 13.5
+		fwd_lim_norm_open: true
+		rev_lim_norm_open: true
+		fwd_lim_enabled: true
+		rev_lim_enabled: true
+		fwd_soft_lim_enabled: false
+		fwd_soft_lim_val: 0.1
+		rev_soft_lim_enabled: false
+		rev_soft_lim_val: -0.1
+		brake_mode: false
+		encoder_CPR: 512
+	}
+	left_slave{
+		port: 8
+		feedback_device: QuadEncoder
+		reverse_sensor: false
+		reverse_output: false
 		is_inverted: false
 		nominal_out_voltage: 0.0
 		peak_out_voltage: 12.0
@@ -197,7 +170,34 @@ drive {
 		fwd_soft_lim_val: 0.1
 		rev_soft_lim_enabled: false
 		rev_soft_lim_val: -0.1
-		brake_mode: true
+		brake_mode: false
+		encoder_CPR: 512
+	}
+	left_slave{
+		port: 6
+		feedback_device: QuadEncoder
+		reverse_sensor: false
+		reverse_output: false
+		is_inverted: false
+		nominal_out_voltage: 0.0
+		peak_out_voltage: 12.0
+		profile: 0
+		kP0: 0.3
+		kI0: 0.00
+		kD0: 3.0
+		kP1: 0.3
+		kI1: 0.00
+		kD1: 3.0
+		max_speed: 13.5
+		fwd_lim_norm_open: true
+		rev_lim_norm_open: true
+		fwd_lim_enabled: true
+		rev_lim_enabled: true
+		fwd_soft_lim_enabled: false
+		fwd_soft_lim_val: 0.1
+		rev_soft_lim_enabled: false
+		rev_soft_lim_val: -0.1
+		brake_mode: false
 		encoder_CPR: 512
 	}
 }
