--- a/src/main/resources/map.cfg
+++ b/src/main/resources/map.cfg
@@ -42,7 +42,7 @@ drive {
 		port: 2
 		feedback_device: QuadEncoder
 		reverse_sensor: false
-		reverse_output: false
+		reverse_output: true
 		is_inverted: true
 		nominal_out_voltage: 0.0
 		peak_out_voltage: 12.0
@@ -50,7 +50,7 @@ drive {
 		kP0: 0.0005
 		kI0: 0.1
 		kD0: 3.0
-		kP1: 0.2
+		kP1: 0.0
 		kI1: 0.0
 		kD1: 0.0
 		max_speed: 12.0127
@@ -77,7 +77,7 @@ drive {
 		kP0: 0.0005
 		kI0: 0.1
 		kD0: 3.0
-		kP1: 0.2
+		kP1: 0.0
 		kI1: 0.0
 		kD1: 0.0
         max_speed: 12.0127
@@ -96,7 +96,7 @@ drive {
 		port: 1
 		feedback_device: QuadEncoder
 		reverse_sensor: false
-		reverse_output: false
+		reverse_output: true
 		is_inverted: true
 		nominal_out_voltage: 0.0
 		peak_out_voltage: 12.0
@@ -123,7 +123,7 @@ drive {
 		port: 3
 		feedback_device: QuadEncoder
 		reverse_sensor: false
-		reverse_output: false
+		reverse_output: true
 		is_inverted: true
 		nominal_out_voltage: 0.0
 		peak_out_voltage: 12.0
@@ -150,7 +150,7 @@ drive {
 		port: 8
 		feedback_device: QuadEncoder
 		reverse_sensor: false
-		reverse_output: false
+		reverse_output: true
 		is_inverted: false
 		nominal_out_voltage: 0.0
 		peak_out_voltage: 12.0
@@ -177,7 +177,7 @@ drive {
 		port: 6
 		feedback_device: QuadEncoder
 		reverse_sensor: false
-		reverse_output: false
+		reverse_output: true
 		is_inverted: false
 		nominal_out_voltage: 0.0
 		peak_out_voltage: 12.0
