Add pneumatics subsystem.

--- a/src/main/resources/map.cfg
+++ b/src/main/resources/map.cfg
@@ -274,3 +274,11 @@ shooter {
 		encoder_CPR: 1024
 	}
 }
+pneumatics {
+    node_ID: 0
+    pressure_sensor {
+        port: 0
+        oversample_bits: 5
+        average_bits: 5
+    }
+}
