Added gear shifting commands.

--- a/src/main/resources/map.cfg
+++ b/src/main/resources/map.cfg
@@ -50,6 +50,10 @@ drive {
 		deadband: 0.0
 		deadband_enabled: false
 	}
+	shifter {
+	    forward: 2
+	    reverse: 3
+	}
 	right_master {
 		port: 5
 		feedback_device: QuadEncoder
